--- a/style.css
+++ b/style.css
@@ -77,3 +77,10 @@ hr{
   left: 267px;
   color: rgba(124, 120, 120, 0.671);
 }
+
+hr {
+    background-color: #F24F1B;
+    width: 100%;
+    height: 3px;
+
+}
