--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@
   box-sizing: border-box;
 }
 .container{
-  max-width: 1100px;
+  max-width: 1250px;
   margin: 0 auto;
+  font-family: 'Roboto',
+  sans-serif;
   
 }
 
@@ -14,6 +16,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 
 .top-bar h1{
@@ -86,45 +89,168 @@ hr {
 }
 
 /* navigation menu  */
-.navbar{
-  justify-content: space-around;
-  display: flex;
-  line-height: 2.7em;
-  align-items: center;
-  min-height: 8vh;
-}
-.option{
-  text-decoration: none;
-  font-size: 22px;
-  color:black;
-  padding: 10px 10px 10px 10px;
+nav {
+  background: #242526;
   position: relative;
-  top: 5px;
+  width: 100%;
+  z-index: 999;
+  height: 65px;
+  line-height: 65px;
+}
+
+nav .wrapper{
+  position: relative;
+   max-width: 1250px;
+   padding: 0 30px;
+   margin: auto;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+ }
+
+.wrapper .nav-links{
+  display: inline-flex;
+}
+.nav-links li {
+  list-style: none;
+}
+
+ .nav-links li a {
+   color: #f2f2f2;
+   text-decoration: none;
+   font-size: 18px;
+   font-weight: 500;
+   padding: 9px 15px;
+   border-radius: 5px;
+   transition: all 0.3s ease;
+  }
   
-}
-.option:hover{
-  color: white;
-  background-color: #F24F1B;
-}
-.fa {
-  padding-right: 5px;
-}
-.signed {
- border:none;
-}
+  .nav-links li a:hover{
+   background: #3a3b3c;
 
-.fa-sort-down{
-  color: rgba(128, 128, 128, 0.418);
-  padding-left: 5px;
-}
-.active .fa-sort-down {
-  color: black;
-}
+ }
+ 
+ .nav-links .drop-menu{
+   background: #242526;
+   width: 180px;
+  top: 85px;
+  line-height: 45px;
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+  }
 
-.active{
-  background-color:#f21bc3;
-  color:white;
-}
-.option.active{
-  color: purple;
-}
+  .nav-links li:hover .drop-menu,
+  .nav-links li:hover .mega-box {
+    top: 65px;
+    opacity: 1;
+    visibility: visible;
+   transition: all 0.3s ease;
+  }
+
+  .drop-menu li a {
+    width: 100%;
+    display: block;
+    padding: 0 0 0 15px;
+    font-weight: 400;
+    border-radius: 0px;
+  }
+
+  .mega-box {
+    position: absolute;
+    top: 80px;
+    width: 100%;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+  }
+  
+  .mega-box .content {
+    background: #242526;
+    padding: 25px 20px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .content .row {
+    width: calc(25% - 30px);
+    line-height: 45px;
+  }
+
+  .content .row img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .content .row header{
+    color: #f2f2f2;
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  .content .row .mega-links{
+    margin-left: -40px;
+    border-left: 1px solid rgba(255, 255, 255, 0.1)
+  }
+
+  .content .row:nth-child(1),
+  .content .row:nth-child(2) 
+  {
+    border-left: 0px;
+  }
+
+ 
+
+  .row .mega-links li{
+    padding: 0 20px;
+  }
+
+  
+  .row .mega-links li a {
+    padding: 0 20px;
+    color: #d9d9d9;
+    font-size: 17px;
+    display: block;
+  }
+
+  .row .mega-links li a:hover{
+    color: #f2f2f2;
+  }
+
+
+  /* Media Queries  */
+  @media screen and (max-width: 970px){
+    .wrapper .nav-links {
+      position: fixed;
+      height: 100vh;
+      width: 100%;
+      max-width: 350px;
+      background: #242526;
+      display: block;
+      top: 0;
+      left: 0;
+      overflow-y: auto;
+      line-height: 50px;
+      padding: 50px 10px;
+      box-shadow: 0 15px 15px rgba(0, 0, 0, 0.15);
+    }
+
+    .nav-links li{
+      margin: 15px 10px;
+    }
+
+    .nav-links li a {
+      padding: 0 20px;
+      display: block;
+      font-size: 20px;
+
+    }
+    .nav-links .drop-menu{
+      position: static;
+      opacity: 1;
+      visibility: visible;
+    }
+
+  }
